# tlpi

./: .gitignore  CMakeLists.txt  README.md
fileio/: copy.c
lib/: ename.c.inc  error_functions.c  error_functions.h  get_num.c  get_num.h  tlpi_hdr.h
procexec/: fork_file_sharing.c  seek_io.c  t_fork.c
